# META-SiM

./: README.md  attention_model_tuning_bf16.ipynb  pyproject.toml  setup.py
.ipynb_checkpoints/: label_self_consistency_scores-checkpoint.ipynb
metasim/: __init__.py
metasim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
metasim/fret/: __init__.py
metasim/fret/core/: __init__.py  atlas.py  atlas_pp_density_models.joblib  data.py  linalg.py  model.py  score.py
metasim/fret/core/legacy/: finetuning.py  multi_task_learning.py
metasim/fret/tools/: __init__.py  idealize.py  tuning.py  viz.py
metasim/fret/tools/downstream_task_model_configs/: ACCEPTORLIFETIME.json  BACKGROUND.json  COINCIDENCE.json  DONORLIFETIME.json  DWELLTIME.json  FRETSTATECOUNT.json  FRETSTATEHIGHEST.json  FRETSTATELOWEST.json  MULTISTEP.json  NBD.json  NBDQUICK.json  NOISELEVEL.json  SINGLECHANNELDWELLTIME.json  SINGLECHANNELLIFETIME.json  SINGLECHANNELNOISELEVEL.json  SINGLECHANNELPHOTOBLEACHINGSTEPSTRACE.json  TRANSITIONPROBQUICK.json  TRANSITIONRATE.json
pdfl_notebooks/: README.md
pretraining/: attention_model_tuning_bf16.ipynb  generate_atlas_dataset.py  generate_dataset.py  idealization_benchmark.ipynb  principal_projection.ipynb
pretraining/smfret/: embedding_projector.py  tf_learning.py
pretraining/traces_data/riboswitch/: fig4-new-rib2.mat
pretraining/traces_data/riboswitch/0.1mM_Mn2+/: fig5-rib17.mat
pretraining/traces_data/riboswitch/1mM_Mg2+_0.1mM_Mn2+/: fig5-rib24.mat
python_notebooks/: eval_rna_bubble.ipynb  eval_simcan.ipynb
smfret/: dataset.py  tf_layers.py
src/: README.md
src/smfret/: evaluation.py  finetuning.py  tf_layers.py
traces_data/riboswitch/0.1mM_Mn2+/: fig5-rib13.mat
traces_data/riboswitch/1mM_Mg2+/: fig4-rib15.mat
traces_data/riboswitch/1mM_Mg2+_0.1mM_Mn2+/: fig5-rib25.mat
tutorials/: README.md  matasim_single_color.ipynb  metasim_built_in_tasks.ipynb  metasim_classification.ipynb  metasim_regression.ipynb  metasim_single_color.ipynb
