[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metasim"
version = "0.0.1"
description = "A foundation model for single-molecule time traces"
readme = "README.md"
authors = [{ name = "Jieming Li", email = "jmli@umich.edu" }, { name = "Leyou Zhang", email = "leyou@umich.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "keras>=2.15.0",
    "tensorflow>=2.15.0",
    "umap-learn>=0.5.3",
    "numpy",
    "scipy",
    "sklearn",
]
[project.urls]
"Homepage" = "https://github.com/simol-lab/META-SiM"
"Bug Tracker" = "https://github.com/simol-lab/META-SiM/issues"

[tool.setuptools]
packages = ["metasim"] # Automatically find packages
