[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metasim"
version = "0.0.rc11"
description = "A foundation model for single-molecule time traces"
readme = "README.md"
authors = [{ name = "Jieming Li, Leyou Zhang", email = "jmli@umich.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "openfret",
    "keras (>=2.13.0,<=2.15.0)",
    "tensorflow (>=2.13.0,<=2.15.0)",
    "umap-learn>=0.5.3",
    "numpy",
    "scikit-learn>=1.0.2",
    "matplotlib",
    "sciplotlib>=0.0.6",
    "joblib"
]
[project.urls]
"Homepage" = "https://github.com/simol-lab/META-SiM"
"Bug Tracker" = "https://github.com/simol-lab/META-SiM/issues"

[tool.setuptools.packages.find]
include = ["metasim", "metasim.*"]

[tool.setuptools]
# Include package data (important for non-Python files):
include-package-data = true  # This is the most important addition.

# If you have specific package data to include (like .joblib, .csv, etc.):
[tool.setuptools.package-data]
"metasim.fret.core" = ["*"]  # Include all files and subdirectories within metasim
"metasim.fret.tools" = ["*"]  # Include all files and subdirectories within metasim
"metasim.fret.tools.downstream_task_model_configs" = ["*"]  # Include all files and subdirectories within metasim

